# opener

./: .gitignore  README.md  opener.py  package-lock.json  package.json  pyproject.toml  requirements.freeze.txt  requirements.txt
opener/: __init__.py  __main__.py  codegen.js  defaults.py  to_dict.py  transformations.py
scripts/: format.js
